Added new generation strategy - IMPLEMENTATION